Beef up worker termination handling in ReadableStream routines https://bugs.webkit.org/show_bug.cgi?id=231500 <rdar://83687915>

Reviewed by Darin Adler.

Add some termination/exception checks after getting values from global objects.
Covered by existing tests.

* bindings/js/ReadableStream.cpp:
(WebCore::ReadableStream::create):
(WebCore::ReadableStream::lock):
* bindings/js/ReadableStreamDefaultController.cpp:
(WebCore::invokeReadableStreamDefaultControllerFunction):
(WebCore::ReadableStreamDefaultController::enqueue):


Canonical link: https://commits.webkit.org/243538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284861 268f45cc-cd09-0410-ab3c-d52691b4dbfc