Source/WebCore/bindings/js/ReadableStreamDefaultController.cpp
@@ -44,10 +44,14 @@ static bool invokeReadableStreamDefaultControllerFunction(JSC::JSGlobalObject& l
     JSC::VM& vm = lexicalGlobalObject.vm();
     JSC::JSLockHolder lock(vm);
 
+    auto scope = DECLARE_CATCH_SCOPE(vm);
     auto function = lexicalGlobalObject.get(&lexicalGlobalObject, identifier);
+
+    EXCEPTION_ASSERT(!scope.exception() || vm.hasPendingTerminationException());
+    RETURN_IF_EXCEPTION(scope, false);
+
     ASSERT(function.isCallable(lexicalGlobalObject.vm()));
 
-    auto scope = DECLARE_CATCH_SCOPE(vm);
     auto callData = JSC::getCallData(vm, function);
     call(&lexicalGlobalObject, function, callData, JSC::jsUndefined(), arguments);
     EXCEPTION_ASSERT(!scope.exception() || vm.hasPendingTerminationException());
@@ -120,10 +124,8 @@ bool ReadableStreamDefaultController::enqueue(RefPtr<JSC::ArrayBuffer>&& buffer)
     auto chunk = JSC::Uint8Array::create(WTFMove(buffer), 0, length);
     auto value = toJS(&lexicalGlobalObject, &lexicalGlobalObject, chunk.get());
 
-    if (UNLIKELY(scope.exception())) {
-        ASSERT(vm.hasPendingTerminationException());
-        return false;
-    }
+    EXCEPTION_ASSERT(!scope.exception() || vm.hasPendingTerminationException());
+    RETURN_IF_EXCEPTION(scope, false);
 
     return enqueue(value);
 }
